# sensi-mouse-cli

./: .gitignore  Cargo.toml  Makefile  README.md  launch-agent.plist
crates/mac-mouse-sys/: Cargo.toml  README.md
crates/mac-mouse-sys/src/: lib.rs
crates/mac-mouse-sys/tests/: basic.rs
src/: helper.rs  main.rs
