[package]
name = "sensi-mouse"
version = "0.1.0"
description = "CLI utility for macOS system-wide mouse sensitivity and acceleration"
edition = "2021"
rust-version = "1.69.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "sensi-mouse"
path = "src/main.rs"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
mac-mouse-sys = { path = "./crates/mac-mouse-sys" }

[profile.release]
lto = true
strip = true
opt-level = "z"
