[package]
name = "mac-mouse-sys"
version = "0.0.8"
authors = ["Eva1ent <let@ik.me>"]
description = "Tiny wrapper for mouse-related functions in macOS `IOKit/hidsystem`."
edition = "2021"

homepage = "https://github.com/Rel1cx/sensi-mouse-cli/tree/master/crates/mac-mouse-sys"
repository = "https://github.com/Rel1cx/sensi-mouse-cli/tree/master/crates/mac-mouse-sys"
# documentation = ""

license = "MIT"
keywords = ["mouse", "hid", "macOS", "osx"]
readme = "README.md"

include = ["Cargo.toml", "build.rs", "c/*", "src/*.rs", "tests/*.rs"]

build = "build.rs"

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"
